--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
                 <p>Here are my few projects!</p>
             </div>
             <div class="service-bottom">
+                 <div class="service-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" style="margin:5%" />
+                </div>
+                <h2>E-commerce (MERN + JWT)</h2>
+                <p>Developed an E-commerce platform using the MERN stack with JWT token authentication for secure user transactions.</p>
+            </div>
+            <div class="service-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" style="margin:5%" />
+                </div>
+                <h2>Bookstore (MERN)</h2>
+                <p>Implemented a Bookstore application using the MERN stack, providing features for book browsing, ordering, and management.</p>
+            </div>
                 <div class="service-item">
                     <div class="icon">
                         <img src="https://img.icons8.com/bubbles/100/000000/services.png"style="margin:5%;" />
