--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             </div>
             <div class="col-right">
                 <h1 class="section-title">Gopal<span>Dixit</span></h1>
-                <h3 style="font-size: 15px;">Front End & Software Developer</h3>
+                <h3 style="font-size: 15px;">FullStack, Mobile Application & Software Developer</h3>
                 <p>Ready For Work</p>
             </div>
         </div>
